Fill some documentation gaps
Fills in some gaps in documentation

this includes documentation for features that have been added recently, as well as some that slipped thru

there’s some reworking of the buffered commands API docs to make their use slightly clearer

also expose more of the documentation we have

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,9 @@ include:
   - MOS-API.md
   - MOS.md
   - Projects.md
+  - Theory-of-operation.md
   - Third-Party-Projects.md
   - Updating-Firmware.md
+  - VDP---Buffered-commands-API.md
   - VDP---Enhanced-Audio-API.md
   - VDP.md
