--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -18,4 +18,4 @@ jobs:
           key: ${{ github.ref }}
           path: .cache
       - run: pip install mkdocs-material
-      - run: mkdocs gh-deploy --force
+      - run: mkdocs gh-deploy --strict --force
