fix(theme): configure auto dark/light mode

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,16 +40,22 @@ theme:
     - content.action.edit
   language: en
   palette:
-    - scheme: default
+    - media: "(prefers-color-scheme)"
+      toggle:
+        icon: material/brightness-auto
+        name: Switch to light mode
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
       toggle:
         icon: material/toggle-switch-off-outline
         name: Switch to dark mode
       primary: deep purple
       accent: purple
-    - scheme: slate
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
       toggle:
         icon: material/toggle-switch
-        name: switch to light mode
+        name: Switch to your system preference
       primary: deep purple
       accent: lime
 
