new “updating firmware” guide
the two previous “updating firmware” pages have been deleted, and a new guide written to replace them

the previous guides were unfortunately outdated (and had been for quite some time) giving not-great advice :D

the new guide hopefully covers all eventualities, and gives advice on the easiest path to upgrading.  it also provides some guidance on recovery tools

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -88,8 +88,7 @@ nav:
   - 'BBC Basic': BBC-BASIC-for-Agon.md
   - 'GPIO': GPIO.md
   - 'Guides':
-    - 'Updating Firmware': Updating-Firmware-from103.md
-    - 'Updating Firmware (prio v1.03)': Updating-Firmware.md
+    - 'Updating Firmware': Updating-Firmware.md
   - 'Additional resources':
     - 'External documentation': External-Documentation.md
     - 'Third party projects': Third-Party-Projects.md
