executables, modules and C functions
* the MOS executable format is now more thoroughly documented.  this now includes documentation for an enhanced header with a new version that includes flags for future use
* the `Run` star command now links to the new Executables documentation to provide more information
* the C functions returned by the `mos_getfunction` API are now more thoroughly documented.  this includes documentation on the C calling convention, and how to use such functions from assembler code
* preliminary documentation for MOS Modules has been added to allow for developers to be prepared for their inclusion and use in future versions of MOS
* the MOS API documentation has been moved into the `mos` folder, and links to it have been changed accordingly
* various improvements have been made to the MOS API documentation both to reference newly added documentation, and to clarify some aspects of the APIs
* some explanations of the concept of “Core MOS” have been added where appropriate
* new MOS documentation files added to the documentation site navigation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -68,7 +68,10 @@ nav:
   - 'MOS':
       - 'Overview': MOS.md
       - 'Command line': mos/Star-Commands.md
-      - 'API': MOS-API.md
+      - 'API': mos/API.md
+      - 'C functions': mos/C-Functions.md
+      - 'Executable format': mos/Executables.md
+      - 'Modules': mos/Modules.md
       - 'System Variables': mos/System-Variables.md
       - 'Argument Substitution': mos/Argument-Substitution.md
   - 'VDP':
